ini parameters to xml

--- a/Offtake2.ini
+++ b/Offtake2.ini
@@ -24,6 +24,8 @@ skipdata		= 0 # пропускать загрузку данных каталога (когда работа только с simba
 
 part_new_name		= MC-
 
+# параметры ниже здесь не используются, перенесены в xml config
+
 spec_v_line_wdt		= 2
 spec_h_line_wdt		= 1
 spec_row_numbers	= 1	# 0 - не печатать за искл позиций изделий, 1 - всегда печатать, 2 - печатать наименования изделий
