--- a/cfg/pwm/Offtake2.cfg
+++ b/cfg/pwm/Offtake2.cfg
@@ -14,7 +14,14 @@
 	<Workspace>
 		<Help path="\\pwm.sp.spbaep.ru\soft\Offtake\help\"/>
 		<Specification libpath="\\pwm.sp.spbaep.ru\soft\Offtake\tmpl\drawings.dgn">
-			<Text>
+			<Scale value="1"/>
+			<Lines>
+				<vertical width="2" color="5"/>
+				<horizontal width="1" color="5"/>
+			</Lines>
+			<Text color="4">
+				<Diameter value="%%c"/>
+				<Skip value="0"/><!-- пропускать дублирующуюся информацию в строчках арматурной спецификации -->
 				<Underline> <!--header text is underlined-->
 					<Default value="true"></Default>
 					<spcfgid12 value="true">LAES-2006</spcfgid12><!-- by spec_config table ID-->
@@ -32,17 +39,21 @@
 					<Default format="0" prefix=""></Default>
 					<spcfgid12 format="0000" prefix="CDF">LAES-2006</spcfgid12><!-- by spec_config table ID-->
 				</spec_sheet_num>
-				<spec_row_numbers> <!--part row num option, see offtake.ini (if 2 - place part name)-->
-					<Default value="1"></Default>
+				<spec_row_numbers> <!-- 0 - не печатать за искл позиций изделий, 1 - всегда печатать, 2 - печатать наименования изделий-->
+					<Default value="1"/>
 					<spcfgid16 value="2">El-Dabaa</spcfgid16>
 					<spcfgid18 value="2">Эль-Дабаа</spcfgid18>
 				</spec_row_numbers>
-				<spec_col_cmass> <!--part common mass column, see offtake.ini-->
+				<spec_col_cmass> <!-- если больше 0 - печатать общую массу в строчки в соотв. колонке -->
 					<Default value="6"></Default>
 					<!--<spcfgid16 value="0">El-Dabaa</spcfgid16> no common mass column-->
 					<!--<spcfgid18 value="0">Эль-Дабаа</spcfgid18> no common mass column-->
 				</spec_col_cmass>
 			</Part>
+			<Excel template="d:\Storage\xls\emb_parts\FH1_ep_list_S_template.xls">
+				<Rows start="5" quantity="23" jump="29"/>
+				<Columns start="5"/>
+			</Excel>
 			<Model>
 				<!-- [1] [2] [3] [4] ... - параметры (1-based), заложенные в имени, например MD-1-2600-65-80-->
 				<!-- для изделия MD-1  параметры [1]=2600  [2]=65  [3]=80   -->
@@ -81,6 +92,10 @@
 					<posdef id="12" name="Электроды" value="true"/>
 				</spcfgid18>
 			</mass_common>
+			<Summary label="Общий расход стали">
+				<spcfgid16 name="settings for El-Dabaa" label="Total|consumption|kg"/>
+				<spcfgid18 name="настройка для Эль-Дабаа" label="Общий|расход,|кг"/>
+			</Summary>
 		</Offtake>
 		<Interface>
 			<Tab name="Wise">
@@ -170,6 +185,10 @@
 			-->
 		</Database>
 		<Reinforcement>
+			<Round>
+				<arc shift="-2" snap="10"/>
+				<line shift="0" snap="5"/>
+			</Round>
 			<!-- данные нахлеста по умолчанию содержатся в таблице PARTS.REIN_LAPS -->
 			<!-- ниже переопределяемые параметры нахлеста -->
 			<Project ID="41">
