--- a/cfg/vibe2/Offtake2.cfg
+++ b/cfg/vibe2/Offtake2.cfg
@@ -110,6 +110,12 @@
 			</Summary>
 		</Offtake>
 		<Interface>
+			<Common>
+				<Grids redraw="false" icons="true"/> 
+				<!-- redraw def "false", "true"/"false" false - откл. отрисовку таблиц при загрузке данных -->
+				<!-- icons def "true", "true"/"false" false - откл. отрисовку значков в таблицах -->
+				<Tabs hide="true"/> <!-- def "true", "true"/"false" true - скрывать вкладки арматуры/изделий в зависимости от типа загружаемого каталога -->
+			</Common>
 			<Tab name="Wise">
 				<Connect name="pw srv" server="pw-srv.sp.spbaep.ru" base="pw_aep" login="docdata" root="56" glev="3">
 					<Filters>
