--- a/cfg/pwm/Offtake2.cfg
+++ b/cfg/pwm/Offtake2.cfg
@@ -24,7 +24,7 @@
 				<Skip value="0"/><!-- пропускать дублирующуюся информацию в строчках арматурной спецификации -->
 				<Underline> <!--header text is underlined-->
 					<Default value="true"></Default>
-					<spcfgid12 value="true">LAES-2006</spcfgid12><!-- by spec_config table ID-->
+					<spcfgid12 value="false">LAES-2006</spcfgid12><!-- false поставлена 08.10.2024 по запросу Шоршиной А.-->
 					<spcfgid16 value="false">El-Dabaa</spcfgid16><!-- by spec_config table ID-->
 					<spcfgid18 value="false">Эль-Дабаа</spcfgid18><!-- by spec_config table ID-->
 				</Underline>
@@ -58,10 +58,10 @@
 				<!-- [1] [2] [3] [4] ... - параметры (1-based), заложенные в имени, например MD-1-2600-65-80-->
 				<!-- для изделия MD-1  параметры [1]=2600  [2]=65  [3]=80   -->
 				<!-- раздел Formula оставлен для работы старых версий   -->
-				<Formula params_quantity="3" splitter_quantity="4">
+				<Formula id="1" params_quantity="3" splitter_quantity="4">
 					[1]*(1e-3)*((50e-3)+2*[3]*(1e-3))
 				</Formula>
-				<Formular name="Сбор протечек UJA (ЛАЭС)" params_quantity="3" splitter_quantity="4">
+				<Formular id="2" name="Сбор протечек UJA (ЛАЭС)" params_quantity="3" splitter_quantity="4">
 					<Postion expr="[1]*(1e-3)*((50e-3)+2*[3]*(1e-3))" criteria="posNumber=1"/>
 				</Formular>
 				<!-- native function args divided by ','-->
@@ -69,7 +69,13 @@
 				то есть если длина например 2350, то соотношение будет 13/6, то есть ~2,16
 				количество рядов не имеет значения, так как соотношение всегда одинаково-->
 				<!-- attr criteria for [view_position]-->
-				<Formular name="Закладные детали из IFC (Египет)" params_quantity="1" splitter_quantity="2" pattern="(MC|MD)-[0-9]{1,5}-[0-9]{1,5}">
+				<Formular id="3" name="Закладные детали с добавлением в название длины (Египет)" params_quantity="0" splitter_quantity="1" pattern="(MC|MD)-[0-9]{1,5}">
+					<Param1 fromtag="true" tagname="L" addtoname="true" koef="1e-1" />
+					<Postion1 expr="[1]*(1e-2)" criteria="posdefID in (8,3) and mcID=0"/><!-- пластина(8), уголок(3)-->
+					<Postion2 expr="native.getAncKoefByLen([1]*(1e1),200,50)" criteria="posdefID=8 and mcID=14"/><!-- усиление анкера-->
+					<Postion3 expr="native.getAncKoefByLen([1]*(1e1),200,50)" criteria="posdefID=1 and mcID=13"/><!-- анкер-->
+				</Formular>
+				<Formular id="4" name="Закладные детали из IFC (Египет)" params_quantity="1" splitter_quantity="2" pattern="(MC|MD)-[0-9]{1,5}-[0-9]{1,5}">
 					<Postion1 expr="[1]*(1e-2)" criteria="posdefID in (8,3) and mcID=0"/><!-- пластина(8), уголок(3)-->
 					<Postion2 expr="native.getAncKoefByLen([1]*(1e1),200,50)" criteria="posdefID=8 and mcID=14"/><!-- усиление анкера-->
 					<Postion3 expr="native.getAncKoefByLen([1]*(1e1),200,50)" criteria="posdefID=1 and mcID=13"/><!-- анкер-->
@@ -82,8 +88,25 @@
 			</Sort>
 		</List>
 		<Offtake>
-			<Function id="1" pds="0" name="goofftall4_3"/>
+			<Interface>
+				<Button id="1" label="Расчёт" tag="Offtake">
+					<ButtonMenu id="1" label="Стандартная"/>
+					<ButtonMenu id="2" label="Общая"/>
+					<ButtonMenu id="3" label="По изделиям" tag="Function3"/>
+				</Button>
+			</Interface>
 			<Function id="2" pds="1" name="goofftall5_3"/>
+			<Function id="3" pds="0">
+				<SQL text="select partName, srtm, mat, sum(mass) as mass, null from #1.dbo.goofftall4_4(#2,#3,1,#4,0,1.,null) group by partName, srtm, mat"/>
+				<Param id="1" label="#1" name="dbname"/>
+				<Param id="2" label="#2" name="objectID"/>
+				<Param id="3" label="#3" name="objID"/>
+				<Param id="4" label="#4" name="full"/>
+				<Column id="1" label="Изделие" name="partName" merge="true"/>
+				<Column id="2" label="Позиция" name="srtm"/>
+				<Column id="3" label="Материал" name="mat"/>
+				<Column id="4" label="Масса" name="mass" format="0.00" subtotal="offtmass" text="Общая масса"/>
+			</Function>
 			<mass_common><!-- в таблице выборки масса отдельно (в коде bMassCommon) -->
 				<spcfgid16 name="settings for El-Dabaa">
 					<posdef id="12" name="Электроды" value="true"/>
@@ -98,8 +121,14 @@
 			</Summary>
 		</Offtake>
 		<Interface>
-			<Tab name="Wise">
-				<Connect name="pw srv" server="pw-srv.sp.spbaep.ru" base="pw_aep" login="docdata" root="56" glev="3">
+			<Common>
+				<Grids redraw="false" icons="true"/> 
+				<!-- redraw def "false", "true"/"false" false - откл. отрисовку таблиц при загрузке данных -->
+				<!-- icons def "true", "true"/"false" false - откл. отрисовку значков в таблицах -->
+				<Tabs hide="true"/> <!-- def "true", "true"/"false" true - скрывать вкладки арматуры/изделий в зависимости от типа загружаемого каталога -->
+			</Common>
+			<Tab index="7" name="Wise">
+				<Connect id="1" name="pw srv" server="pw-srv.sp.spbaep.ru" base="pw_aep" login="docdata" root="56" glev="3">
 					<Filters>
 						<Standard>('Paks-2','БН-1200','БРЕСТ-ОД-300','ЛАЭС-2006')</Standard>
 					</Filters>
@@ -115,7 +144,7 @@
 					<Department ID="17"/><!-- ЭТУ -->
 					<Department ID="18"/><!-- ОМОТ -->
 				</Connect>
-				<Connect name="pw connect" server="pwrk.sp.spbaep.ru" base="pw_aep_con" login="docdata" root="56" glev="3">
+				<Connect id="2" name="pw connect" server="pwrk.sp.spbaep.ru" base="pw_aep_con" login="docdata" root="56" glev="3">
 					<Filters>
 						<Standard>('El-Dabaa','Tianwan','Xudapu')</Standard>
 					</Filters>
@@ -133,7 +162,7 @@
 				<!-- 
 				<Connect name="tech fin" server="COMP05628" base="techsim" login="so2user">
 				-->
-				<Connect name="FH1 tech" server="pwxfin.sp.spbaep.ru" base="techsim" login="so2user"> 
+				<Connect id="3" name="FH1 tech" server="pwxfin.sp.spbaep.ru" base="techsim" login="so2user"> 
 					<Department ID="5" edit_grid="false" edit_tree="true"/><!-- ТУ -->
 					<Department ID="7" edit_grid="false" edit_tree="true"/><!-- ОТВ -->
 					<Department ID="8" edit_grid="false" edit_tree="true"/><!-- ОВП -->
@@ -142,8 +171,8 @@
 					<Department ID="18" edit_grid="false" edit_tree="true"/><!-- ОМОТ -->
 				</Connect> 
 			</Tab>
-			<Tab name="Rein">
-				<Import key="uja" name="Импорт Тяньвань (A500СЕУ ГОСТ 34028-2016)" descr="Импорт позиций арматуры из файла Excel с идентификатором сортамента" app="Excel" startrow="2">
+			<Tab index="2" name="Rein">
+				<Import id="1" key="uja" name="Импорт Тяньвань (A500СЕУ ГОСТ 34028-2016)" descr="Импорт позиций арматуры из файла Excel с идентификатором сортамента" app="Excel" startrow="2">
 					<Column index="0" key="posnum" required="true"/>
 					<Column index="1" key="quantity" required="false"/>
 					<Column index="2" key="length" required="false"/>
@@ -152,7 +181,7 @@
 					<Column index="5" key="posnote" required="false"/>
 					<Material ID="117"/>
 				</Import>
-				<Import key="rein_paks" name="Импорт Пакш-2 (B500C MSZ EN 10027-1:2017)" descr="Импорт позиций арматуры из файла Excel с идентификатором сортамента" app="Excel" startrow="2">
+				<Import id="2" key="rein_paks" name="Импорт Пакш-2 (B500C MSZ EN 10027-1:2017)" descr="Импорт позиций арматуры из файла Excel с идентификатором сортамента" app="Excel" startrow="2">
 					<Column index="0" key="posnum" required="true"/>
 					<Column index="1" key="quantity" required="false"/>
 					<Column index="2" key="length" required="false"/>
@@ -161,8 +190,28 @@
 					<Column index="5" key="posnote" required="false"/>
 					<Material ID="134"/>
 				</Import>
+				<Import id="3" key="rein_upd" name="Обновление позиций арматуры из файла Excel" descr="" app="Excel" startrow="2" update="true">
+					<Column index="0" key="posnum" required="true"/>
+					<Column index="1" key="quantity" required="false"/>
+					<Column index="2" key="length" required="false"/>
+					<Column index="3" key="srtmID" required="true"/>
+					<Column index="4" key="sketch" required="false"/>
+					<Column index="5" key="posnote" required="false"/>
+					<Column index="6" key="matID" />
+					<Material ID="134"/>
+				</Import>				
+				<!-- экспорт если key начинается с exp -->
+				<Export id="1" key="exp1" name="Экспорт позиций арматуры в файл Excel" app="Excel" startrow="2">
+					<Column index="0" key="posnum" srckey="num" />
+					<Column index="1" key="quantity" srckey="qty" />
+					<Column index="2" key="length" />
+					<Column index="3" key="srtmID" />
+					<Column index="4" key="matID" />
+					<Column index="5" key="sketch" dec="true"/> <!-- dec - проебразовывать значение boolean в целое число -->
+					<Column index="6" key="posnote" rowdata="true" /> <!-- rowdata - брать значение из fg.rowdata(row) -->
+				</Export>
 			</Tab>
-			<Tab name="Part">
+			<Tab index="1" name="Part">
 				<Sketches path="\\pwm.sp.spbaep.ru\soft\Offtake\pics\" ext="jpg"/>
 			</Tab>
 		</Interface>
@@ -2638,6 +2687,28 @@
 		</View>
 	
 	<!--===================================== ПАКШ =================================================== -->
+	
+	
+		<View Name="Doors" Title="Двери" Keys="^(drsf)" Proj="^(Paks-2)$">
+			<!-- Параметры sql запроса -->
+			<SQLQuery HiddenColumns="(simID|pwdocID|Код ККС здания)$" MergeColumns="" MergeRef="" LevelFilterColumn="" AutoIndexColumn="">
+				Select * from view_i_PKS2_Doors where pwdocID in (%f.getDocGuids%) order by [Door KKS Code]
+			</SQLQuery>
+			<Errors> <!-- Параметры обработчика ошибок -->
+			</Errors>
+			<ExcelExport
+				TemplatePath="\\pwm.sp.spbaep.ru\soft\Offtake\tmpl\PKS_door_list.xlt"				
+				StartRow="6"
+				StartColumn="1"
+				EndPageRow="-1"
+				Jump="0"
+				SavePath="c:\AECOsim_out_sheets"
+				GroupByLevel="False"
+				GroupBy=""
+			/>
+		</View>
+	
+	
 		<View Name="Rooms" Title="Экспликация в AECOsim" Keys="^(rmsf|rlvl)" Proj="^(Paks-2)$">
 			<!-- Параметры sql запроса -->
 			<SQLQuery HiddenColumns="(id|ID|KKS здания|KKS отметки)$" MergeColumns="" MergeRef="" LevelFilterColumn="^KKS$" AutoIndexColumn="">
@@ -2764,7 +2835,7 @@
 			</Errors>
 			<!-- Настройки шаблона Excel -->
 			<ExcelExport
-				TemplatePath="\\pwm.sp.spbaep.ru\soft\Offtake\tmpl\PKS_List_of_Rooms_SPF.xls"				
+				TemplatePath="\\pwm.sp.spbaep.ru\soft\Offtake\tmpl\PKS_List_of_Rooms_SPF_v3.xls"				
 				StartRow="10"
 				StartColumn="2"
 				EndPageRow="-1"
