--- a/cfg/vibe2/Offtake2.cfg
+++ b/cfg/vibe2/Offtake2.cfg
@@ -13,8 +13,13 @@
 	<!-- если force="false" то выдается окно выбора баз -->
 	<Workspace>
 		<Help path="\\vibe2.sp.spbaep.ru\exc\Offtake\bin\hlp\"/>
-		<Specification libpath="d:\projects\Offtsql\cfg\vibe2\drawings.dgn">
+		<Specification libpath="\\pwm.sp.spbaep.ru\soft\Offtake\testing\drawings.dgn">
+			<Log active="0"/>
 			<Scale value="1"/>
+			<Electrodes>
+				<Value id="1" name="ЭА-400/10у" material="E-07Cr19Ni11Mo3Mn2V"/>
+				<Value id="2" name="ЭА-395/9" material="E-11Cr15Ni25Mo6NMn2"/>
+			</Electrodes>
 			<Lines>
 				<vertical width="2" color="5"/>
 				<horizontal width="1" color="5"/>
@@ -67,10 +72,10 @@
 				<!-- [1] [2] [3] [4] ... - параметры (1-based), заложенные в имени, например MD-1-2600-65-80-->
 				<!-- для изделия MD-1  параметры [1]=2600  [2]=65  [3]=80   -->
 				<!-- раздел Formula оставлен для работы старых версий   -->
-				<Formula params_quantity="3" splitter_quantity="4">
+				<Formula id="1" params_quantity="3" splitter_quantity="4">
 					[1]*(1e-3)*((50e-3)+2*[3]*(1e-3))
 				</Formula>
-				<Formular name="Сбор протечек UJA (ЛАЭС)" params_quantity="3" splitter_quantity="4">
+				<Formular id="2" name="Сбор протечек UJA (ЛАЭС)" params_quantity="3" splitter_quantity="4">
 					<Postion expr="[1]*(1e-3)*((50e-3)+2*[3]*(1e-3))" criteria="posNumber=1"/>
 				</Formular>
 				<!-- native function args divided by ','-->
@@ -78,7 +83,13 @@
 				то есть если длина например 2350, то соотношение будет 13/6, то есть ~2,16
 				количество рядов не имеет значения, так как соотношение всегда одинаково-->
 				<!-- attr criteria for [view_position]-->
-				<Formular name="Закладные детали из IFC (Египет)" params_quantity="1" splitter_quantity="2" pattern="(MC|MD)-[0-9]{1,5}-[0-9]{1,5}">
+				<Formular id="3" name="Закладные детали с добавлением в название длины (Египет)" params_quantity="0" splitter_quantity="1" pattern="(MC|MD)-[0-9]{1,5}">
+					<Param1 fromtag="true" tagname="L" addtoname="true" koef="1e-1" />
+					<Postion1 expr="[1]*(1e-2)" criteria="posdefID in (8,3) and mcID=0"/><!-- пластина(8), уголок(3)-->
+					<Postion2 expr="native.getAncKoefByLen([1]*(1e1),200,50)" criteria="posdefID=8 and mcID=14"/><!-- усиление анкера-->
+					<Postion3 expr="native.getAncKoefByLen([1]*(1e1),200,50)" criteria="posdefID=1 and mcID=13"/><!-- анкер-->
+				</Formular>
+				<Formular id="4" name="Закладные детали из IFC (Египет)" params_quantity="1" splitter_quantity="2" pattern="(MC|MD)-[0-9]{1,5}-[0-9]{1,5}">
 					<Postion1 expr="[1]*(1e-2)" criteria="posdefID in (8,3) and mcID=0"/><!-- пластина(8), уголок(3)-->
 					<Postion2 expr="native.getAncKoefByLen([1]*(1e1),200,50)" criteria="posdefID=8 and mcID=14"/><!-- усиление анкера-->
 					<Postion3 expr="native.getAncKoefByLen([1]*(1e1),200,50)" criteria="posdefID=1 and mcID=13"/><!-- анкер-->
@@ -91,11 +102,29 @@
 			</Sort>
 		</List>
 		<Offtake>
+			<Interface>
+				<Button id="1" label="Расчёт" tag="Offtake">
+					<ButtonMenu id="1" label="Стандартная"/>
+					<ButtonMenu id="2" label="Общая"/>
+					<ButtonMenu id="3" label="По изделиям" tag="Function3"/>
+				</Button>
+			</Interface>
 			<Function id="1" pds="0" name="goofftall4_3">
 				<Section id="1">
 				</Section>
 			</Function>
 			<Function id="2" pds="1" name="goofftall5_3"/>
+			<Function id="3" pds="0">
+				<SQL text="select partName, srtm, mat, sum(mass) as mass, null from #1.dbo.goofftall4_4(#2,#3,1,#4,0,1.,null) group by partName, srtm, mat"/>
+				<Param id="1" label="#1" name="dbname"/>
+				<Param id="2" label="#2" name="objectID"/>
+				<Param id="3" label="#3" name="objID"/>
+				<Param id="4" label="#4" name="full"/>
+				<Column id="1" label="Изделие" name="partName" merge="true"/>
+				<Column id="2" label="Позиция" name="srtm"/>
+				<Column id="3" label="Материал" name="mat"/>
+				<Column id="4" label="Масса" name="mass" format="0.00" subtotal="offtmass" text="Общая масса"/>
+			</Function>
 			<mass_common><!-- в таблице выборки масса отдельно (в коде bMassCommon) -->
 				<spcfgid16 name="settings for El-Dabaa">
 					<posdef id="12" name="Электроды" value="true"/>
@@ -2661,6 +2690,28 @@
 		</View>
 	
 	<!--===================================== ПАКШ =================================================== -->
+	
+	
+		<View Name="Doors" Title="Двери" Keys="^(drsf)" Proj="^(Paks-2)$">
+			<!-- Параметры sql запроса -->
+			<SQLQuery HiddenColumns="(id|ID)$" MergeColumns="" MergeRef="" LevelFilterColumn="" AutoIndexColumn="">
+				Select * from view_i_PKS2_Doors where pwdocID in (%f.getDocGuids%) order by [Door KKS Code]
+			</SQLQuery>
+			<Errors> <!-- Параметры обработчика ошибок -->
+			</Errors>
+			<ExcelExport
+				TemplatePath="\\vibe2.sp.spbaep.ru\ms\set\seed\new\FH1_door_list_S_template.xlt"				
+				StartRow="6"
+				StartColumn="1"
+				EndPageRow="-1"
+				Jump="0"
+				SavePath="c:\AECOsim_out_sheets"
+				GroupByLevel="False"
+				GroupBy=""
+			/>
+		</View>
+	
+	
 		<View Name="Rooms" Title="Экспликация в AECOsim" Keys="^(rmsf|rlvl)" Proj="^(Paks-2)$">
 			<!-- Параметры sql запроса -->
 			<SQLQuery HiddenColumns="(id|ID|KKS здания|KKS отметки)$" MergeColumns="" MergeRef="" LevelFilterColumn="^KKS$" AutoIndexColumn="">
